refact: Rename everything from Create to Receitaws

--- a/.github/workflows/deploy_nuget_api_client.yml
+++ b/.github/workflows/deploy_nuget_api_client.yml
@@ -19,9 +19,9 @@ jobs:
         id: publish_nuget
         uses: alirezanet/publish-nuget@v3.0.4
         with:
-          PROJECT_FILE_PATH: src/Create.API.Client/Create.API.Client.csproj
-          PACKAGE_NAME: Create.API.Client
-          VERSION_FILE_PATH: src/Create.API.Client/Create.API.Client.csproj
+          PROJECT_FILE_PATH: src/Receitaws.API.Client/Receitaws.API.Client.csproj
+          PACKAGE_NAME: Receitaws.API.Client
+          VERSION_FILE_PATH: src/Receitaws.API.Client/Receitaws.API.Client.csproj
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_COMMIT: true
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
