--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,14 +17,14 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Restore dependencies
-        working-directory: ./src/Create.API.Client/
+        working-directory: ./src/Receitaws.API.Client/
         run: dotnet restore
       - name: Build
-        working-directory: ./src/Create.API.Client/
+        working-directory: ./src/Receitaws.API.Client/
         run: dotnet build --no-restore
       - name: Unit Tests
-        working-directory: ./test/Create.API.Client.UnitTests/
+        working-directory: ./test/Receitaws.API.Client.UnitTests/
         run: dotnet test
       - name: Integration Tests
-        working-directory: ./test/Create.API.Client.IntegrationTests/
+        working-directory: ./test/Receitaws.API.Client.IntegrationTests/
         run: dotnet test
