refact: Missing renamings

--- a/sample/Receitaws.API.Client.WebApi/Properties/launchSettings.json
+++ b/sample/Receitaws.API.Client.WebApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Create.API.Client.WebApi": {
+    "Receitaws.API.Client.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
